<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey1"
    tools:context=".games.view.GamesFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/lightGrey1"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/search_margin"
                android:background="@drawable/edit_text_shape"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/search_margin"
                    android:background="@drawable/ic_search"
                    android:backgroundTint="@color/lightGrey2"
                    android:contentDescription="@string/search_games" />

                <EditText
                    android:id="@+id/search_input"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autofillHints="text"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_hint"
                    android:inputType="text"
                    android:textColor="@color/lightGreen"
                    android:textColorHint="@color/lightGrey1"
                    android:textCursorDrawable="@drawable/green_cursor" />

                <ImageButton
                    android:id="@+id/mic_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/search_margin"
                    android:background="@drawable/ic_mic"
                    android:backgroundTint="@color/lightGrey2"
                    android:contentDescription="@string/voice_search" />
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/games_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/games_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/card_margin"
        android:backgroundTint="@color/red"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>